<resources>
    <string name="app_name">SennenAgukweTask1</string>
    <string name="title">Student Registration</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail_id">E-mail Id</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_city">Enter City</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="enter_province">Enter Province</string>
    <string name="register">Register</string>
</resources>